simplify createButtons method.

--- a/vanillaDOM/style.css
+++ b/vanillaDOM/style.css
@@ -35,6 +35,7 @@ button {
     cursor: pointer;
     background: none;
     font-size: xx-large;
+    border: none;
 }
 
 button[data-columns="0"] {
