--- a/vanillaDOM/style.css
+++ b/vanillaDOM/style.css
@@ -18,11 +18,14 @@ body {
 .status {
     margin: 0 auto;
     width: fit-content;
-    font-size: large;
-    font-weight: bold;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.status p {
+    font-size: large;
+    font-weight: bold;
 }
 
 #id {
@@ -60,6 +63,20 @@ button[data-rows="1"] {
     font-size: 16px;
     border-radius: 5px;
     border: solid 1px;
+}
+
+ul {
+    list-style: none;
+}
+
+.status li {
+    border: 1px black solid;
+    padding: 3px;
+    margin-bottom: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 /*Learnt about vertical-align when aligning buttons: https://stackoverflow.com/questions/75586785/html-button-moves-aftter-being-clicked-on/75587738#75587738*/
