--- a/ReactComponent/app/index.css
+++ b/ReactComponent/app/index.css
@@ -23,6 +23,7 @@ body {
     height: 100px;
     border: none;
     font-size: inherit;
+    cursor: pointer;
 }
 
 .board .row {
@@ -47,4 +48,20 @@ button[data-column="0"], button[data-column="1"] {
 .status-text {
     font-size: x-large;
     margin-bottom: 20px;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    border: 1px black solid;
+    padding: 2px 5px;
+    margin-bottom: 4px;
+    box-shadow: 2px 2px;
+    cursor: pointer;
+}
+
+li:hover {
+    background-color: rgb(248, 248, 248);
 }
