--- a/FunctionalReact/app/index.css
+++ b/FunctionalReact/app/index.css
@@ -8,5 +8,58 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
+    padding-top: 100px;
 }
+
+#app {
+    margin: 0 auto;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.row {
+    display: flex;
+}
+
+#app .board button {
+    height: 100px;
+    width: 100px;
+    font-size: xx-large;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+#app .board button:hover {
+    background-color: #f5f3f3;
+}
+
+#app button[data-row="0"], #app button[data-row="1"] {
+    border-bottom: 2px #333 solid;
+}
+
+#app button[data-col="0"], #app button[data-col="1"] {
+    border-right: 2px #333 solid;
+}
+
+.status {
+    font-size: x-large;
+    text-align: center;
+    margin: 50px;
+}
+
+.resetButton {
+    padding: 2px 10px;
+}
+
+
+/*
+NOTES:
+1. margin collapsing
+   Cannot add margin on top of app, that will make body also has top margin.
+   https://stackoverflow.com/questions/7579000/why-margin-top-of-the-top-div-would-apply-to-body#:~:text=The%20basic%20reason%20for%20this,distance%20around%20the%20element%20content.
+*/
+
 
