--- a/FunctionalReact/app/index.css
+++ b/FunctionalReact/app/index.css
@@ -59,6 +59,22 @@ body {
     padding: 2px 10px;
 }
 
+ul {
+    list-style: none;
+}
+
+li {
+    border: 1px black solid;
+    padding: 2px 5px;
+    margin-bottom: 4px;
+    box-shadow: 2px 2px;
+    cursor: pointer;
+}
+
+li:hover {
+    background-color: rgb(248, 248, 248);
+}
+
 
 /*
 NOTES:
